fix(VNavigationDrawer): Content behind v-navigation-drawer scrolls
Replace scrim with v-overlay component, which fixes the scroll issues

fixes #19477

--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -76,17 +76,6 @@
     object-fit: $navigation-drawer-img-object-fit
     width: $navigation-drawer-img-width
 
-.v-navigation-drawer__scrim
-  position: absolute
-  top: 0
-  left: 0
-  width: 100%
-  height: 100%
-  background: black
-  opacity: $navigation-drawer-scrim-opacity
-  transition: opacity $navigation-drawer-transition-duration $navigation-drawer-transition-timing-function
-  z-index: 1
-
 .v-navigation-drawer__prepend,
 .v-navigation-drawer__append
   flex: none
